--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Rebuild and Push Sonarr/Radarr
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # Runs daily at midnight UTC
+    - cron: "0 0 * * 1"   # Runs every Monday at midnight UTC
   workflow_dispatch:       # Allows manual trigger
 
 jobs:
